@@ -1,3 +1,9 @@
+Mon Apr 21 19:12:20 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (rb_str_coderange_scan_restartable): coderange is always
+	  ENC_CODERANGE_VALID if the string is ASCII-8BIT and already has a non
+	  ASCII character.
+
 Mon Apr 21 19:02:44 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* string.c (coderange_scan): remove useless condtion `p < e` after
